--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,14 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles"
+              ]
+            },
             "scripts": []
           },
           "configurations": {
@@ -92,8 +98,14 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles"
+              ]
+            },
             "scripts": []
           }
         },
@@ -123,6 +135,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "ads-media-front"
+    }
+  },
+  "defaultProject": "ads-media-front",
+  "cli": {
+    "analytics": false
+  }
 }
